# Anime-Media-Upscaler

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/: RELEASE_TEMPLATE.md
docs/: CHANGELOG.md  CONTRIBUTING.md  README.md  USAGE.md
src/: build.bat  main.py
src/app/: main_window.py  settings_dialog.py  ui_utils.py  workers.py
tests/: test_basic.py  test_workers.py
