[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sharpify-gui"
version = "2.0.0"
authors = [
  { name="ukr", email="ujjwalkrai@gmail.com" },
]
description = "A desktop GUI for the Real-ESRGAN image and video upscaler."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: PyQt",
    "Topic :: Multimedia :: Graphics :: Editors"
]
dependencies = [
    "PyQt6>=6.6.0,<7.0.0"
]

[project.urls]
"Homepage" = "https://github.com/uikraft-hub/sharpify-gui"
"Bug Tracker" = "https://github.com/uikraft-hub/sharpify-gui/issues"

[tool.setuptools.packages.find]
where = ["src"]
